--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.bg-graph-paper {
+    background-image:
+      linear-gradient(to right, rgba(130, 130, 130, 0.12) 1px, transparent 1px),
+      linear-gradient(to bottom, rgba(130, 130, 130, 0.12) 1px, transparent 1px);
+    background-size: 20px 20px;
+  }
+.bg-graph-paper-min {
+    background-image:
+      linear-gradient(to right, rgba(130, 130, 130, 0.12) 1px, transparent 1px),
+      linear-gradient(to bottom, rgba(130, 130, 130, 0.12) 1px, transparent 1px);
+    background-size: 10px 10px;
+  }
+
+  .blue_glow {
+    box-shadow: 0 0 180px 50px rgba(15, 241, 255, 0.3), 0 0 240px 60px rgba(15, 241, 255, 0.3), 0 0 300px 80px rgba(15, 241, 255, 0.1);
+    
+  }
+  .green_glow {
+    box-shadow: 0 0 180px 50px rgba(1, 252, 139, 0.3), 0 0 240px 60px rgba(1, 252, 139, 0.3), 0 0 300px 80px rgba(1, 252, 139, 0.1);
+    
+  }
